# ProStream

services/auth-service/: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml
services/auth-service/alembic/: __init__.py  env.py  versions.py
services/auth-service/app/: grpc_server.py  main.py
services/auth-service/app/api/routes/: auth.py  dependencies.py  deps.py
services/auth-service/app/core/: config.py  db.py  metrics.py
services/auth-service/app/grpc/: __init__.py  auth.proto  auth_pb2.py  auth_pb2_grpc.py  auth_servicer.py  interceptor.py  run_server.py
services/auth-service/app/models/: base.py  refresh_token.py  user.py
services/auth-service/app/repositories/: refresh_repo.py  user_repo.py
services/auth-service/app/schemas/: token.py  user.py
services/auth-service/app/security/: jwt.py
services/auth-service/app/services/: auth_service.py
services/auth-service/app/utils/: kafka_producer.py  redis_client.py  token_hash.py
services/auth-service/tests/: test_auth.py
services/comment-service/: .env  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
services/comment-service/alembic/: env.py
services/comment-service/alembic/versions/: 0001_create_comments.py
services/comment-service/app/: main.py
services/comment-service/app/api/: comments.py  dependencies.py
services/comment-service/app/core/: config.py  db.py
services/comment-service/app/grpc/: comment.proto  comment_pb2.py  comment_pb2_grpc.py  comment_servicer.py  interceptor.py  run_server.py
services/comment-service/app/models/: comment.py
services/comment-service/app/repositories/: comment_repo.py
services/comment-service/app/schemes/: comment.py
services/comment-service/app/services/: comment_service.py
services/comment-service/app/utils/: kafka.py  redis.py
services/user-service/: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
services/user-service/.github/workflows/: ci.yml
services/user-service/alembic/: env.py
services/user-service/alembic/versions/: 0001_create_user_profiles.py
services/user-service/app/: main.py
services/user-service/app/api/: dependenices.py  users.py
services/user-service/app/core/: config.py  db.py  metrics.py
services/user-service/app/grpc/: grpc_server.py  interceptor.py  run_server.py  user.proto  user_pb2.py  user_pb2_grpc.py  user_servicer.py
services/user-service/app/models/: profile.py
services/user-service/app/repositories/: profile_repo.py
services/user-service/app/schemes/: profile.py
services/user-service/app/security/: jwt.py
services/user-service/app/services/: profile_service.py
services/user-service/app/utils/: kafka.py  redis_cache.py
services/video-service/: .env  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
services/video-service/app/: main.py
services/video-service/app/alembic/: env.py
services/video-service/app/alembic/versions/: 0001_create_videos.py
services/video-service/app/api/: health.py  stream.py  upload.py
services/video-service/app/core/: config.py  db.py
services/video-service/app/models/: video.py
services/video-service/app/repositories/: video_repo.py
services/video-service/app/schemes/: video.py
services/video-service/app/services/: video_service.py
services/video-service/app/utils/: ffmpeg.py  kafka.py  s3.py
services/video-service/app/workers/: celery_app.py  tasks.py
