[tool.poetry]
name = "video-service"
version = "0.1.0"
description = "Video service for ProStream: upload, transcode, store, stream"
authors = ["Abdumalik-ProDev <abdumalikbakhtiyorovwork@gmail.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.8"
asyncpg = "^0.30.0"
alembic = "^1.13.1"
aioboto3 = "^11.0.0"
boto3 = "^1.26.0"
aiofiles = "^23.1.0"
python-multipart = "^0.0.6"
celery = "^5.3.1"
redis = "^5.0.4"
aiokafka = "^0.12.0"
prometheus-fastapi-instrumentator = "^6.0.0"
prometheus-client = "^0.16.0"
pydantic = "^1.10.15"
httpx = "^0.27.2"
typing-extensions = "^4.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.21.1"
black = "^24.8.0"
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"